methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  while (!estFAceMur){
    if (!estFaceMur){
      forward()
      if (getGroundColor()==Color.green){
        backward
        return true
      }
      else {
        backward()
        left()
      }
    else {
      left()
    }
    }}
  return true
  }
